Bug 972140 - fix tabbrowser-tabs min-height for Australis so it doesn't get squashed when the non-abs-pos bits have 0 width, r=mconley
UltraBlame original commit: 9a9f7dd350aa61a87c51353d364a5da545cc8b56

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -109,6 +109,18 @@ png
 )
 ;
 }
+#
+tabbrowser
+-
+tabs
+{
+min
+-
+height
+:
+tabHeight
+;
+}
 .
 tabbrowser
 -
